...

  @override
  State<ChooseFrequencyPage> createState() => _ChooseFrequencyPageState();
}

class _ChooseFrequencyPageState extends State<ChooseFrequencyPage> {
  bool isDailySelected = false; // Para el botón de "Todos los días"
  List<String> selectedDays = []; // Para los días seleccionados de la semana
  final List<String> weekDays = ['Lun', 'Mar', 'Mie', 'Jue', 'Vie', 'Sab', 'Dom'];
  final HabitController habitController = Get.find<HabitController>();

  @override
  Widget build(BuildContext context) {
...
                    ),
                  );
                }).toList(),
              ),
            const Spacer(),

            // Botones de "Cancelar" y "Finalizar"
            Row(
              mainAxisAlignment: MainAxisAlignment.spaceBetween,
              children: [
                const BackButtonWidget(),
                NavigateButton(
                  text: 'Finalizar',
...
